fix spacing

--- a/themes/casper/source/css/screen.css
+++ b/themes/casper/source/css/screen.css
@@ -148,7 +148,6 @@ h6 {
 }
 
 a {
-  color: #50585D;
   text-shadow: 1px 1px 1px rgba(255,255,255, 0.2);
   font-family: Montserrat, sans-serif;
   text-decoration: none;
@@ -445,16 +444,12 @@ margin on the iframe, cause it breaks stuff. */
     background-size: cover;
 }
 
-.blog-logo {
-    text-decoration: none;
-}
-
 /* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
 .blog-logo {
   display: block;
   width: 96px;
   height: 96px;
-  margin:  0 auto;
+  margin:  64px auto;
 }
 
 .circle {
